--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="icon" href="Images/logo.png">
   </head>
 
   <body>
 
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="index.html">
-        <img class="logo" src="images/logo.png" alt="logo-img">
+      <a class="navbar-brand" href="#">
+        <img class="logo" src="Images/logo.png" alt="logo-img">
       </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +81,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="images/the-gang.png" class="card-img" alt="">
+              <img src="Images/the-gang.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">The Gang</h3>
@@ -98,7 +99,7 @@
 
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="images/tindog.png" class="card-img" alt="">
+              <img src="Images/tindog.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">TinDog</h3>
@@ -119,7 +120,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="images/the-dice-game.png" class="card-img" alt="">
+              <img src="Images/the-dice-game.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">The Dice Game</h3>
@@ -137,7 +138,7 @@
 
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="images/todo-list.png" class="card-img" alt="">
+              <img src="Images/todo-list.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">ToDo List</h3>
@@ -153,6 +154,8 @@
             </div>
           </div>
         </div>
+
+        <h4 class="project-text">Check out more of my projects on <a href="https://github.com/Nomaira" target="_blank">GitHub</a> and <a href="https://codepen.io/nomaira" target="_blank">CodePen</a>.</h4>
 
       </div>
     </section>
