--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
 
     <!-- Header Section -->
-    <section class="coloured-section" id="header">
+    <section id="header">
       <div class="container-fluid">
 
         <!-- Intro -->
@@ -61,7 +61,7 @@
     </section>
 
     <!-- About Section -->
-    <section class="white-section" id="about">
+    <section id="about">
       <div class="container-fluid">
         <h2 class="about-heading">Hello.</h2>
         <p class="about-text">I am a self-taught front-end web developer with the goal to become a Full-stack Web and Mobile Developer.</p><br />
@@ -74,7 +74,7 @@
 
 
     <!-- Projects Section -->
-    <section class="white-section" id="projects">
+    <section id="projects">
       <div class="container-fluid">
         <h2 class="project-heading">My Projects</h2>
 
@@ -162,7 +162,7 @@
 
 
     <!-- contact Section -->
-    <footer class="white-section" id="footer">
+    <footer id="footer">
       <div class="container-fluid">
         <a href="https://github.com/Nomaira" target="_blank"><i class="social-icon fab fa-github"></i></a>
         <a href="https://codepen.io/nomaira" target="_blank"><i class="social-icon fab fa-codepen"></i></a>
