--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p class="about-text">I am a self-taught front-end web developer with the goal to become a Full-stack Web and Mobile Developer.</p><br />
         <p class="about-text">I started learning coding during my last year of university as a Mathematics student. What started with a five-day coding challenge due to sheer boredom in quarantine has now become an exciting daily routine. </p>
         <h4 class="contact">Lets Talk.</h4>
-        <a class="btn" href="mailto:nomairafariah@outlook.com" type="button">Contact Me</a>
+        <a class="btn" href="mailto:nomairafariah@outlook.com">Contact Me</a>
 
       </div>
     </section>
