--- a/index.html
+++ b/index.html
@@ -81,6 +81,83 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="card text-center">
+              <img src="Images/simon-game.png" class="card-img" alt="">
+              <div class="card-img-overlay">
+                <div class="card-content">
+                  <h3 class="card-title">Simon Game</h3>
+                  <ul class="card-text">
+                    <li class="card-list">HTML</li>
+                    <li class="card-list">CSS</li>
+                    <li class="card-list">JS</li>
+                    <li class="card-list">jQuery</li>
+                  </ul>
+                  <a href="https://nomaira.github.io/Simon-Game/" class="btn" target="_blank">See the Site</a>
+                  <a href="https://github.com/Nomaira/Simon-Game" class="btn" target="_blank">See the Code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="card text-center">
+              <img src="Images/the-dice-game.png" class="card-img" alt="">
+              <div class="card-img-overlay">
+                <div class="card-content">
+                  <h3 class="card-title">The Dice Game</h3>
+                  <ul class="card-text">
+                    <li class="card-list">HTML</li>
+                    <li class="card-list">CSS</li>
+                    <li class="card-list">JS</li>
+                  </ul>
+                  <a href="https://nomaira.github.io/the-dice-game/" class="btn" target="_blank">See the Site</a>
+                  <a href="https://github.com/Nomaira/the-dice-game" class="btn" target="_blank">See the Code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="card text-center">
+              <img src="Images/drum-kit.png" class="card-img" alt="">
+              <div class="card-img-overlay">
+                <div class="card-content">
+                  <h3 class="card-title">The Drums</h3>
+                  <ul class="card-text">
+                    <li class="card-list">HTML</li>
+                    <li class="card-list">CSS</li>
+                    <li class="card-list">JS</li>
+                  </ul>
+                  <a href="https://nomaira.github.io/Drum-Kit/" class="btn" target="_blank">See the Site</a>
+                  <a href="https://github.com/Nomaira/Drum-Kit" class="btn" target="_blank">See the Code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="card text-center">
+              <img src="Images/todo-list.png" class="card-img" alt="">
+              <div class="card-img-overlay">
+                <div class="card-content">
+                  <h3 class="card-title">ToDo List</h3>
+                  <ul class="card-text">
+                    <li class="card-list">HTML</li>
+                    <li class="card-list">CSS</li>
+                    <li class="card-list">JS</li>
+                  </ul>
+                  <a href="https://nomaira.github.io/todo-list/" class="btn" target="_blank">See the Site</a>
+                  <a href="https://github.com/Nomaira/todo-list" class="btn" target="_blank">See the Code</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="card text-center">
               <img src="Images/the-gang.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
@@ -117,43 +194,6 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="card text-center">
-              <img src="Images/the-dice-game.png" class="card-img" alt="">
-              <div class="card-img-overlay">
-                <div class="card-content">
-                  <h3 class="card-title">The Dice Game</h3>
-                  <ul class="card-text">
-                    <li class="card-list">HTML</li>
-                    <li class="card-list">CSS</li>
-                    <li class="card-list">JS</li>
-                  </ul>
-                  <a href="https://nomaira.github.io/the-dice-game/" class="btn" target="_blank">See the Site</a>
-                  <a href="https://github.com/Nomaira/the-dice-game" class="btn" target="_blank">See the Code</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="card text-center">
-              <img src="Images/todo-list.png" class="card-img" alt="">
-              <div class="card-img-overlay">
-                <div class="card-content">
-                  <h3 class="card-title">ToDo List</h3>
-                  <ul class="card-text">
-                    <li class="card-list">HTML</li>
-                    <li class="card-list">CSS</li>
-                    <li class="card-list">JS</li>
-                  </ul>
-                  <a href="https://nomaira.github.io/todo-list/" class="btn" target="_blank">See the Site</a>
-                  <a href="https://github.com/Nomaira/todo-list" class="btn" target="_blank">See the Code</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <h4 class="project-text">Check out more of my projects on <a href="https://github.com/Nomaira" target="_blank">GitHub</a> and <a href="https://codepen.io/nomaira" target="_blank">CodePen</a>.</h4>
 
