updated HTML footer section

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
     <footer id="footer">
       <div class="container-fluid">
         <a href="https://github.com/Nomaira" target="_blank"><i class="social-icon fab fa-github"></i></a>
+        <a href="https://dribbble.com/Nomaira" target="_blank"><i class="social-icon fab fa-dribbble"></i></a>
         <a href="https://codepen.io/nomaira" target="_blank"><i class="social-icon fab fa-codepen"></i></a>
         <a href="mailto:nomairafariah@outlook.com"><i class="social-icon fas fa-envelope"></i></a>
         <p>© 2020 Nomaira</p>
