--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#footer">More</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -66,9 +66,7 @@
         <h2 class="about-heading">Hello.</h2>
         <p class="about-text">I am a self-taught front-end web developer with the goal to become a Full-stack Web and Mobile Developer.</p><br />
         <p class="about-text">I started learning coding during my last year of university as a Mathematics student. What started with a five-day coding challenge due to sheer boredom in quarantine has now become an exciting daily routine. </p>
-        <h4 class="contact">Lets Talk.</h4>
         <a class="btn" href="mailto:nomairafariah@outlook.com">Contact Me</a>
-
       </div>
     </section>
 
@@ -202,6 +200,13 @@
 
 
     <!-- contact Section -->
+    <div id="contact">
+      <h4 class="contact">Lets Talk.</h4>
+      <p>Have an exciting project you need help with?</p>
+      <a class="btn" href="mailto:nomairafariah@outlook.com">Contact Me</a>
+    </div>
+
+
     <footer id="footer">
       <div class="container-fluid">
         <a href="https://github.com/Nomaira" target="_blank"><i class="social-icon fab fa-github"></i></a>
