--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h2 class="about-heading">Hello.</h2>
         <p class="about-text">I am a self-taught front-end web developer with the goal to become a Full-stack Web and Mobile Developer.</p><br />
         <p class="about-text">I started learning coding during my last year of university as a Mathematics student. What started with a five-day coding challenge due to sheer boredom in quarantine has now become an exciting daily routine. </p>
-        <a class="btn" href="mailto:nomairafariah@outlook.com">Contact Me</a>
+        <a class="btn contact-btn" href="mailto:nomairafariah@outlook.com">Contact Me</a>
       </div>
     </section>
 
@@ -203,7 +203,7 @@
     <div id="contact">
       <h4 class="contact">Lets Talk.</h4>
       <p>Have an exciting project you need help with?</p>
-      <a class="btn" href="mailto:nomairafariah@outlook.com">Contact Me</a>
+      <a class="btn contact-btn" href="mailto:nomairafariah@outlook.com">Contact Me</a>
     </div>
 
 
