Changes in HTML and CSS in header section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
 
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar fixed-top navbar-expand-lg">
       <a class="navbar-brand" href="#">
         <img class="logo" src="Images/logo.png" alt="logo-img">
       </a>
@@ -35,14 +35,15 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
           </li>
+          
         </ul>
       </div>
     </nav>
@@ -50,11 +51,16 @@
     <!-- Header Section -->
     <section id="header">
       <div class="container-fluid">
-
+        
         <!-- Intro -->
         <div class="intro">
-          <h1>I'm Nomaira.</h1>
+          <h2>Hi! I am</h2>
+          <h1>Nomaira.</h1>
           <h3>a web developer.</h3>
+        </div>
+
+        <div class="header-img">
+          <img src="images/programmer.svg" alt="programmer">
         </div>
 
       </div>
@@ -207,6 +213,7 @@
     </div>
 
 
+    <!-- Footer Section -->
     <footer id="footer">
       <div class="container-fluid">
         <a href="https://github.com/Nomaira" target="_blank"><i class="social-icon fab fa-github"></i></a>
