--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="header-img">
-          <img src="images/programmer.svg" alt="programmer">
+          <img src="Images/programmer.svg" alt="programmer">
         </div>
 
       </div>
