changes to hero section and navbar

--- a/index.html
+++ b/index.html
@@ -48,19 +48,22 @@
       </div>
     </nav>
 
-    <!-- Header Section -->
-    <section id="header">
-      <div class="container-fluid">
+    <!-- Hero Section -->
+    <section>
+      <div class="container-fluid hero">
         
         <!-- Intro -->
         <div class="intro">
           <h2>Hi! I am</h2>
           <h1>Nomaira.</h1>
-          <h3>a web developer.</h3>
+          <h3>a developer and analyst.</h3>
+          <button class="cta-btn" onclick="document.location='#projects'">
+            Portfolio
+          </button>
         </div>
 
-        <div class="header-img">
-          <img src="Images/programmer.svg" alt="programmer">
+        <div class="hero-img">
+          <img src="images/cube.svg" alt="developer">
         </div>
 
       </div>
