changes to image links

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="Images/simon-game.png" class="card-img" alt="">
+              <img src="images/simon-game.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">Simon Game</h3>
@@ -107,7 +107,7 @@
 
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="Images/the-dice-game.png" class="card-img" alt="">
+              <img src="images/the-dice-game.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">The Dice Game</h3>
@@ -127,7 +127,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="Images/drum-kit.png" class="card-img" alt="">
+              <img src="images/drum-kit.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">The Drums</h3>
@@ -145,7 +145,7 @@
 
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="Images/todo-list.png" class="card-img" alt="">
+              <img src="images/todo-list.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">ToDo List</h3>
@@ -165,7 +165,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="Images/the-gang.png" class="card-img" alt="">
+              <img src="images/the-gang.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">The Gang</h3>
@@ -183,7 +183,7 @@
 
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="Images/tindog.png" class="card-img" alt="">
+              <img src="images/tindog.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">TinDog</h3>
