--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="icon" href="Images/logo.png">
+    <link rel="icon" href="images/logo.png">
   </head>
 
   <body>
@@ -23,7 +23,7 @@
     <!-- Nav Bar -->
     <nav class="navbar fixed-top navbar-expand-lg">
       <a class="navbar-brand" href="#">
-        <img class="logo" src="Images/logo.png" alt="logo-img">
+        <img class="logo" src="images/logo.png" alt="logo-img">
       </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
