--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="icon" href="images/logo.png">
+    <link rel="icon" href="Images/logo.png">
   </head>
 
   <body>
@@ -23,7 +23,7 @@
     <!-- Nav Bar -->
     <nav class="navbar fixed-top navbar-expand-lg">
       <a class="navbar-brand" href="#">
-        <img class="logo" src="images/logo.png" alt="logo-img">
+        <img class="logo" src="Images/logo.png" alt="logo-img">
       </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,7 +63,7 @@
         </div>
 
         <div class="hero-img">
-          <img src="images/cube.svg" alt="developer">
+          <img src="Images/cube.svg" alt="developer">
         </div>
 
       </div>
@@ -88,7 +88,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="images/simon-game.png" class="card-img" alt="">
+              <img src="Images/simon-game.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">Simon Game</h3>
@@ -107,7 +107,7 @@
 
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="images/the-dice-game.png" class="card-img" alt="">
+              <img src="Images/the-dice-game.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">The Dice Game</h3>
@@ -127,7 +127,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="images/drum-kit.png" class="card-img" alt="">
+              <img src="Images/drum-kit.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">The Drums</h3>
@@ -145,7 +145,7 @@
 
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="images/todo-list.png" class="card-img" alt="">
+              <img src="Images/todo-list.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">ToDo List</h3>
@@ -165,7 +165,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="images/the-gang.png" class="card-img" alt="">
+              <img src="Images/the-gang.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">The Gang</h3>
@@ -183,7 +183,7 @@
 
           <div class="col-lg-6">
             <div class="card text-center">
-              <img src="images/tindog.png" class="card-img" alt="">
+              <img src="Images/tindog.png" class="card-img" alt="">
               <div class="card-img-overlay">
                 <div class="card-content">
                   <h3 class="card-title">TinDog</h3>
