changes to title of each HTML file

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Nomaira Fariah</title>
+    <title>Contact Me</title>
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
