--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Nomaira Fariah</title>
-
+    <title>About Me</title>
+ 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Parisienne&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
