changes made to feature section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
 
         <div class="feature-card">
-          <img class="feature-card-img" src="Images/music-player7.png" alt="">
+          <img class="feature-card-img" src="Images/music-player-web-app.png" alt="">
         </div>
       </div>
 
