--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
     <!-- Nav Bar -->
     <nav class="navbar fixed-top navbar-expand-lg">
-      <a class="navbar-brand" href="home.html">
+      <a class="navbar-brand" href="index.html">
         <img class="logo" src="Images/logo.png" alt="logo-img">
       </a>
 
