changes to feature project and services sections

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 
       <div class="container">
         <h2 class="about-heading">Hello.</h2>
-        <p class="about-text">I am a self-taught front-end web developer with the goal of becoming a Full-stack Developer.<br><br>
+        <p class="about-text">I am a self-taught frontend web developer with the goal of becoming a Full-stack Developer.<br><br>
         I started learning coding during my last year of university as a Mathematics student. What started with a five-day coding challenge due to sheer boredom in quarantine has now become an exciting daily routine. </p>
         <a class="cta-btn contact-btn" href="contact.html">Contact Me</a>
       </div>
@@ -98,25 +98,25 @@
             HTML
           </li>
           <li class="skills-item">
-            <span class="iconify" data-icon="vscode-icons:file-type-r" data-inline="false"></span>
-            R
+            <span class="iconify" data-icon="vscode-icons:file-type-sql" data-inline="false"></span>
+            SQL
           </li> 
           <li class="skills-item">
-            <span class="iconify" data-icon="logos:nodejs" data-inline="false"></span>
-            Node
+            <span class="iconify data" data-icon="bx:bxl-jquery" data-inline="false"></span>
+            jQuery
           </li>
           <li class="skills-item">
             <span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>
             CSS
           </li>
           <li class="skills-item">
-            <span class="iconify" data-icon="vscode-icons:file-type-sql" data-inline="false"></span>
-            SQL
-          </li> 
-          <li class="skills-item">
             <span class="iconify" data-icon="vscode-icons:folder-type-mongodb" data-inline="false"></span>
             MongoDB
-          </li> 
+          </li>
+          <li class="skills-item">
+            <span class="iconify" data-icon="logos:nodejs" data-inline="false"></span>
+            Node
+          </li>
           <li class="skills-item">
             <span class="iconify" data-icon="vscode-icons:file-type-sass" data-inline="false"></span>
             Sass
@@ -141,9 +141,6 @@
         <div class="illustrations">
           <h3 class="spaced-lettering ">Some of my digital illustrations:</h3>
           <div class="illustrations-card">
-            <!-- <img class="illustration-img" src="Images/flower1.jpeg" alt="landscape-illustration">
-            <img class="illustration-img" src="Images/flower2.jpeg" alt="flower-illustration">
-            <img class="illustration-img" src="Images/flower3.jpeg" alt="book"> -->
             <img class="illustration-img resize-img" src="Images/landscape1.png" alt="landscape-illustration">
             <img class="illustration-img resize-img" src="Images/landscape2.png" alt="landscape-illustration">
             <img class="illustration-img resize-img" src="Images/landscape3.png" alt="landscape-illustration">
@@ -165,7 +162,7 @@
     </footer>
 
 
-    <!-- vscode-icons -->
+    <!-- iconify icons -->
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <!-- Bootstrap Script -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
