--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <div class="feature-text">
           <h3 class="spaced-lettering">Latest Project</h3>
           <h2>Music Player</h2>
-          <p>Lorem ipsum dolor sit amet consectetur 
-            adipisicing elit. Quos distinctio asperiores 
-            perferendis illo aliquam deleniti.</p>
+          <p>A react project designed using Figma and developed with 
+            <a href="https://create-react-app.dev/" target="_blank">Create React App</a> to set up the web app. The music was provided by 
+            <a href="https://chillhop.com/" target="_blank">Chillhop Music</a> in order to create a library.</p>
         </div>
 
         <div class="feature-card">
@@ -88,34 +88,32 @@
 
       <!-- Services Section -->
       <div class="services">
-        <div onclick="document.location='/projects.html/#development'" class="services-card">
+        <div onclick="document.location='/projects.html'" class="services-card">
           <div class="services-icon">
             <img src="Images/frontend.svg" alt="frontend">
           </div>
           <h3 class="services-title">Development</h3>
-          <p class="services-description">Lorem ipsum dolor sit amet 
-            consectetur adipisicing elit. Libero ad reprehenderit 
-            accusamus.</p>
+          <p class="services-description">I create responsive websites and web apps using both frontend and backend languages. 
+            Check out my 
+            <a href="projects.html/#development" target="_blank">Portfolio</a>.
+          </p>
         </div>
         
-        <div class="services-card">
+        <div onclick="window.open('https://dribbble.com/Nomaira', '_blank')" class="services-card">
           <div class="services-icon">
             <img src="Images/web-design.svg" alt="design">
           </div>
           <h3 class="services-title">Design</h3>
-          <p class="services-description">Lorem ipsum dolor sit amet 
-            consectetur adipisicing elit. Libero ad reprehenderit 
-            accusamus.</p>
+          <p class="services-description">I design minimalistic and modern UI websites using figma. Check out some of my work on 
+            <a href="https://dribbble.com/Nomaira" target="_blank">Dribbble</a>.</p>
         </div>
 
-        <div class="services-card">
+        <div onclick="document.location='/projects.html'" class="services-card">
           <div class="services-icon">
             <img src="Images/data.svg" alt="data">
           </div>
           <h3 class="services-title">Data</h3>
-          <p class="services-description">Lorem ipsum dolor sit amet 
-            consectetur adipisicing elit. Libero ad reprehenderit 
-            accusamus.</p>
+          <p class="services-description">I produce data visualisations using python and R and work with machine learning algorithms using python libraries such as TensorFlow.</p>
         </div>
       </div>
 
