Updated Projects.html and feature section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <main class="container-fluid">
       <!-- Feature Section -->
-      <div class="feature">
+      <div onclick="window.open('https://github.com/Nomaira/music-player', '_blank')" class="feature">
         <div class="feature-text">
           <h3 class="spaced-lettering">Latest Project</h3>
           <h2>Music Player</h2>
@@ -113,7 +113,7 @@
             <img src="Images/data.svg" alt="data">
           </div>
           <h3 class="services-title">Data</h3>
-          <p class="services-description">I produce data visualisations using python and R and work with machine learning algorithms using python libraries such as TensorFlow.</p>
+          <p class="services-description">I provide data analysis and work with machine learning algorithms using python libraries such as TensorFlow.</p>
         </div>
       </div>
 
