--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
@@ -58,9 +58,10 @@
         <a class="cta-btn select-btn" href="#hobbies">My Hobbies</a>
       </div>
 
-      <!-- <div class="select-img"> -->
-        <img class="select-img" src="Images/me.svg" alt="about-me">
-      <!-- </div> -->
+      <div class="select-img">
+        <img src="Images/me.svg" alt="about-me">
+      </div>
+      
 
       <div id="about" class="gap"></div>
 
