updates contact, projects and navbar section

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 
     <main class="container-fluid">
       <!-- contact Section -->
-      <div class="contact container">
+      <div class="contact">
         <h2>Lets Talk.</h2>
         <p class="contact-text">Have an exciting project you need help with? <br>
           I'm always open to discuss any exciting new projects 
