--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <!-- Feature Section -->
       <div onclick="window.open('https://github.com/Nomaira/music-player', '_blank')" class="feature">
         <div class="feature-text">
-          <h3 class="spaced-lettering">Latest Project</h3>
+          <h3 class="spaced-lettering">Featured Project</h3>
           <h2>Music Player</h2>
           <p>A react project designed using Figma and developed with 
             <a href="https://create-react-app.dev/" target="_blank">Create React App</a> to set up the web app. The music was provided by 
@@ -88,7 +88,7 @@
 
       <!-- Services Section -->
       <div class="services">
-        <div onclick="document.location='/projects.html'" class="services-card">
+        <div onclick="document.location='/projects.html#development'" class="services-card">
           <div class="services-icon">
             <img src="Images/frontend.svg" alt="frontend">
           </div>
@@ -99,7 +99,7 @@
           </p>
         </div>
         
-        <div onclick="window.open('https://dribbble.com/Nomaira', '_blank')" class="services-card">
+        <div onclick="document.location='/projects.html#design'" class="services-card">
           <div class="services-icon">
             <img src="Images/web-design.svg" alt="design">
           </div>
@@ -108,7 +108,7 @@
             <a href="https://dribbble.com/Nomaira" target="_blank">Dribbble</a>.</p>
         </div>
 
-        <div onclick="document.location='/projects.html'" class="services-card">
+        <div onclick="document.location='/projects.html#data'" class="services-card">
           <div class="services-icon">
             <img src="Images/data.svg" alt="data">
           </div>
