updated about.html and feature section in index.html

--- a/about.html
+++ b/about.html
@@ -67,8 +67,15 @@
 
       <div class="container">
         <h2 class="about-heading">Hello.</h2>
-        <p class="about-text">I am a self-taught frontend web developer with the goal of becoming a Full-stack Developer.<br><br>
-        I started learning coding during my last year of university as a Mathematics student. What started with a five-day coding challenge due to sheer boredom in quarantine has now become an exciting daily routine. </p>
+        <p class="about-text">I am a self-taught frontend web developer and data analyst.<br><br>
+        I started learning coding during my last year of university as a Mathematics student. 
+        What started with a five-day coding challenge due to sheer boredom in quarantine has 
+        now become an exciting daily routine. <br><br>
+        I also have a keen interest in Data and Machine Learning, having completed a Data Science Programme with 
+        <a href="https://techtalent.academy/">TechTalent Academy</a>.<br><br>
+
+        I would love to have a chat with you.
+        </p>
         <a class="cta-btn contact-btn" href="contact.html">Contact Me</a>
       </div>
 
