--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <h2>Music Player</h2>
           <p>A react project designed using Figma and developed with 
             <a href="https://create-react-app.dev/" target="_blank">Create React App</a> to set up the web app. The music was provided by 
-            <a href="https://chillhop.com/" target="_blank">Chillhop Music</a> in order to create a library.</p>
+            <a href="https://chillhop.com/" target="_blank">Chillhop Music</a> in order to create the library.</p>
         </div>
 
         <div class="feature-card">
