updated select section

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
     <!-- About Section -->
     <section class="container-fluid">
-      <div class="select">
+      <div class="select row">
         <a class="cta-btn select-btn" href="#about">About Me</a>
         <a class="cta-btn select-btn" href="#skills">My Skills</a>
         <a class="cta-btn select-btn" href="#hobbies">My Hobbies</a>
