--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
     </nav>
 
     <section class="container-fluid">
-      <div class="select">
+      <div class="select row">
         <a class="cta-btn select-btn" href="#development">Development</a>
         <a class="cta-btn select-btn" href="#design">UI Design</a>
         <a class="cta-btn select-btn" href="#data">Data Science</a>
