Updated feature section and projects.html

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
       <div id="development" class="project-container gap">
         <h2 class="project-heading">Developer.</h2>
 
-        <div onclick="window.open('https://github.com/Nomaira/music-player', '_blank')" class="feature project-card">
+        <div onclick="window.open('https://nomaira.github.io/music-player/', '_blank')" class="feature project-card">
           <div class="feature-text">
             <h3 class="spaced-lettering">Web App</h3>
             <h2>Music Player</h2>
@@ -76,7 +76,7 @@
         <div onclick="window.open('https://nomaira.github.io/todo-list/', '_blank')" class="feature project-card">
           <div class="feature-text">
             <h3 class="spaced-lettering">Web App</h3>
-            <h2>todo-list</h2>
+            <h2>To Do List</h2>
           </div>
           <div class="feature-card">
             <img class="feature-card-img" src="Images/todo-list.png" alt="">
