--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <main class="container-fluid">
       <!-- Feature Section -->
-      <div onclick="window.open('https://github.com/Nomaira/music-player', '_blank')" class="feature">
+      <div onclick="window.open('https://nomaira.github.io/music-player/', '_blank')" class="feature">
         <div class="feature-text">
           <h3 class="spaced-lettering">Featured Project</h3>
           <h2>Music Player</h2>
