--- a/projects.html
+++ b/projects.html
@@ -212,7 +212,7 @@
         <a href="https://github.com/Nomaira" target="_blank"><i class="social-icon fab fa-github"></i></a>
         <a href="https://dribbble.com/Nomaira" target="_blank"><i class="social-icon fab fa-dribbble"></i></a>
         <a href="https://codepen.io/nomaira" target="_blank"><i class="social-icon fab fa-codepen"></i></a>
-        <a href="mailto:nomairafariah@outlook.com"><i class="social-icon fas fa-envelope"></i></a>
+        <a href="mailto:nomairaf@gmail.com"><i class="social-icon fas fa-envelope"></i></a>
         <p>© 2020 Nomaira</p>
     </footer>
 
