--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           I'm always open to discuss any exciting new projects 
           and opportunities.
         </p>
-        <a class="cta-btn contact-btn" href="mailto:nomairafariah@outlook.com">Contact Me</a>
+        <a class="cta-btn contact-btn" href="mailto:nomairaf@gmail.com">Contact Me</a>
       </div>
     </main>
 
@@ -134,7 +134,7 @@
         <a href="https://github.com/Nomaira" target="_blank"><i class="social-icon fab fa-github"></i></a>
         <a href="https://dribbble.com/Nomaira" target="_blank"><i class="social-icon fab fa-dribbble"></i></a>
         <a href="https://codepen.io/nomaira" target="_blank"><i class="social-icon fab fa-codepen"></i></a>
-        <a href="mailto:nomairafariah@outlook.com"><i class="social-icon fas fa-envelope"></i></a>
+        <a href="mailto:nomairaf@gmail.com"><i class="social-icon fas fa-envelope"></i></a>
         <p>© 2021 Nomaira</p>
       <!-- </div> -->
     </footer>
