--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 
         I would love to have a chat with you.
         </p>
-        <a class="cta-btn contact-btn" href="contact.html">Contact Me</a>
+        <a class="cta-btn contact-btn" href="mailto:nomairaf@gmail.com">Contact Me</a>
       </div>
 
       <div id="skills" class="gap"></div>
