--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
       <div id="about" class="gap"></div>
 
       <div class="container">
-        <!-- <h2 class="about-heading">Hello.</h2> -->
+        <h2 class="about-heading">Hello.</h2>
         <p class="about-text">I am a self-taught frontend web developer and data analyst.<br><br>
         I started learning coding during my last year of university as a Mathematics student. 
         What started with a five-day coding challenge due to sheer boredom in quarantine has 
