updated contact.html and about.html

--- a/about.html
+++ b/about.html
@@ -117,10 +117,10 @@
             <span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span>
             CSS
           </li>
-          <li class="skills-item">
+          <!-- <li class="skills-item">
             <span class="iconify" data-icon="vscode-icons:folder-type-mongodb" data-inline="false"></span>
             MongoDB
-          </li>
+          </li> -->
           <li class="skills-item">
             <span class="iconify" data-icon="logos:nodejs" data-inline="false"></span>
             Node
