--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
       </div>
     </nav>
 
-    <main class="container-fluid">
+    <main class="container-fluid contact-container">
       <!-- contact Section -->
       <div class="contact">
         <h2>Lets Talk.</h2>
