updated services section and css

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <!-- Services Section -->
       <div class="services row">
         <div class="col-lg-4">
-          <div onclick="document.location='/projects.html'" class="services-card">
+          <div onclick="document.location='projects.html#development'" class="services-card">
             <img class="services-icon" src="Images/frontend.svg" alt="frontend">
             <h3 class="services-title">Development</h3>
             <p class="services-description">I create responsive websites and web apps using both frontend and backend languages. 
@@ -99,7 +99,7 @@
 
         
         <div class="col-lg-4">
-          <div onclick="document.location='/projects.html'" class="services-card">
+          <div onclick="document.location='projects.html#design'" class="services-card">
             <img class="services-icon" src="Images/web-design.svg" alt="design">
             <h3 class="services-title">Design</h3>
             <p class="services-description">I design minimalistic and modern UI websites using figma. Check out some of my work on 
@@ -109,7 +109,7 @@
 
         
         <div class="col-lg-4">
-          <div onclick="document.location='/projects.html'" class="services-card">
+          <div onclick="document.location='projects.html#data'" class="services-card">
             <img class="services-icon" src="Images/data.svg" alt="data">
             <h3 class="services-title">Data</h3>
             <p class="services-description">I provide data analysis and work with machine learning algorithms using python libraries such as TensorFlow.</p>
